# grpc-with-python

./: .tool-versions  README.md  pyproject.toml
grpc_in_python/: chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  client.py  server.py
protos/: chat.proto
